--- a/test-output/index.html
+++ b/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\user\AppData\Local\Temp\testng-eclipse--8562279\testng-customsuite.xml</span>
+                    <span>C:\Users\user\AppData\Local\Temp\testng-eclipse--295465360\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -304,7 +304,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\user\AppData\Local\Temp\testng-eclipse--8562279\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\user\AppData\Local\Temp\testng-eclipse--295465360\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -357,63 +357,63 @@ data.addRows(15);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'signUp')
 data.setCell(0, 2, 'Login.TestCase')
-data.setCell(0, 3, 7620);
+data.setCell(0, 3, 7374);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'Checkout')
 data.setCell(1, 2, 'Login.TestCase')
-data.setCell(1, 3, 5233);
+data.setCell(1, 3, 5460);
 data.setCell(2, 0, 2)
 data.setCell(2, 1, 'addToCart')
 data.setCell(2, 2, 'Login.TestCase')
-data.setCell(2, 3, 4376);
+data.setCell(2, 3, 4154);
 data.setCell(3, 0, 3)
 data.setCell(3, 1, 'addToCart')
 data.setCell(3, 2, 'Login.TestCase')
-data.setCell(3, 3, 4301);
+data.setCell(3, 3, 3904);
 data.setCell(4, 0, 4)
 data.setCell(4, 1, 'addToCart')
 data.setCell(4, 2, 'Login.TestCase')
-data.setCell(4, 3, 3740);
+data.setCell(4, 3, 3897);
 data.setCell(5, 0, 5)
 data.setCell(5, 1, 'addToCart')
 data.setCell(5, 2, 'Login.TestCase')
-data.setCell(5, 3, 3724);
+data.setCell(5, 3, 3531);
 data.setCell(6, 0, 6)
 data.setCell(6, 1, 'addToCart')
 data.setCell(6, 2, 'Login.TestCase')
-data.setCell(6, 3, 3641);
+data.setCell(6, 3, 3445);
 data.setCell(7, 0, 7)
 data.setCell(7, 1, 'addToCart')
 data.setCell(7, 2, 'Login.TestCase')
-data.setCell(7, 3, 3473);
+data.setCell(7, 3, 3358);
 data.setCell(8, 0, 8)
 data.setCell(8, 1, 'addToCart')
 data.setCell(8, 2, 'Login.TestCase')
-data.setCell(8, 3, 2749);
+data.setCell(8, 3, 3263);
 data.setCell(9, 0, 9)
 data.setCell(9, 1, 'addToCart')
 data.setCell(9, 2, 'Login.TestCase')
-data.setCell(9, 3, 2729);
+data.setCell(9, 3, 3149);
 data.setCell(10, 0, 10)
-data.setCell(10, 1, 'Logout')
+data.setCell(10, 1, 'addToCart')
 data.setCell(10, 2, 'Login.TestCase')
-data.setCell(10, 3, 2721);
+data.setCell(10, 3, 2938);
 data.setCell(11, 0, 11)
 data.setCell(11, 1, 'addToCart')
 data.setCell(11, 2, 'Login.TestCase')
-data.setCell(11, 3, 2676);
+data.setCell(11, 3, 2860);
 data.setCell(12, 0, 12)
 data.setCell(12, 1, 'addToCart')
 data.setCell(12, 2, 'Login.TestCase')
-data.setCell(12, 3, 2620);
+data.setCell(12, 3, 2753);
 data.setCell(13, 0, 13)
-data.setCell(13, 1, 'addToCart')
+data.setCell(13, 1, 'Logout')
 data.setCell(13, 2, 'Login.TestCase')
-data.setCell(13, 3, 2365);
+data.setCell(13, 3, 2661);
 data.setCell(14, 0, 14)
 data.setCell(14, 1, 'login')
 data.setCell(14, 2, 'Login.TestCase')
-data.setCell(14, 3, 1667);
+data.setCell(14, 3, 1099);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
@@ -451,64 +451,68 @@ return data;
               </div> <!-- configuration-test before -->
               <div class="test-method">
                 <span class="method-name">signUp</span>
-                <span class="method-start">2095 ms</span>
+                <span class="method-start">2214 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">Logout</span>
-                <span class="method-start">9735 ms</span>
+                <span class="method-start">9600 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">login</span>
-                <span class="method-start">12461 ms</span>
+                <span class="method-start">12267 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">addToCart</span>
-                <span class="method-start">14142 ms</span>
+                <span class="method-start">13374 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">addToCart</span>
-                <span class="method-start">18522 ms</span>
+                <span class="method-start">17540 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">addToCart</span>
-                <span class="method-start">21997 ms</span>
+                <span class="method-start">20903 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">addToCart</span>
-                <span class="method-start">24624 ms</span>
+                <span class="method-start">24804 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">addToCart</span>
-                <span class="method-start">28350 ms</span>
+                <span class="method-start">27563 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">addToCart</span>
-                <span class="method-start">31998 ms</span>
+                <span class="method-start">30834 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">addToCart</span>
-                <span class="method-start">34366 ms</span>
+                <span class="method-start">33695 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">addToCart</span>
-                <span class="method-start">38671 ms</span>
+                <span class="method-start">37142 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">addToCart</span>
-                <span class="method-start">41351 ms</span>
+                <span class="method-start">40678 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">addToCart</span>
-                <span class="method-start">44109 ms</span>
+                <span class="method-start">44594 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">addToCart</span>
-                <span class="method-start">47852 ms</span>
+                <span class="method-start">47540 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">Checkout</span>
-                <span class="method-start">50592 ms</span>
+                <span class="method-start">50714 ms</span>
               </div> <!-- test-method -->
+              <div class="configuration-test after">
+                <span class="method-name">Close</span>
+                <span class="method-start">56178 ms</span>
+              </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
       </div> <!-- main-panel-root -->
